# oracle-be

./: .eslintrc.cjs  Cargo.toml  package.json  pnpm-lock.yaml  program-id.md
clients/js/: package.json
clients/rust/: Cargo.toml
configs/: kinobi.mjs  shank.mjs  validator.cjs
configs/program-scripts/: test.py
crates/common/src/: borsh_size.rs
crates/common/src/cpi/: spl.rs
idls/: optimistic_oracle.json  oracle.json
programs/oracle/: Cargo.toml
programs/oracle/src/: error.rs  instruction.rs  lib.rs  macros.rs  pda.rs
programs/oracle/src/processor/: claim_assertion_v1.rs  claim_dispute_v1.rs  claim_vote_v1.rs  close_stake_v1.rs  close_voting_v1.rs  create_assertion_v1.rs  create_currency_v1.rs  create_oracle_v1.rs  create_request_v1.rs  create_stake_v1.rs  dispute_assertion_v1.rs  mod.rs  resolve_assertion_v1.rs  submit_vote_v1.rs  update_currency_v1.rs  update_oracle_v1.rs
programs/oracle/src/processor/assertion/: create.rs  dispute.rs  expire.rs  mod.rs
programs/oracle/src/processor/currency/: create.rs
programs/oracle/src/processor/oracle/: create.rs
programs/oracle/src/processor/request/: create.rs
programs/oracle/src/processor/voting/: finalize.rs  mod.rs  submit.rs
programs/oracle/src/state/: assertion.rs  config.rs  currency.rs  mod.rs  oracle.rs  request.rs  stake.rs  vote.rs  voting.rs
programs/oracle/src/utils/: asserts.rs  mod.rs
